--- a/Draw/Controller/Feed/FeedDetailController~ipad.xib
+++ b/Draw/Controller/Feed/FeedDetailController~ipad.xib
@@ -435,7 +435,7 @@
 						<string key="NSFrame">{{48, 268}, {100, 45}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="554680063"/>
+						<reference key="NSNextKeyView" ref="981492632"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -451,6 +451,20 @@
 						<float key="IBUIMinimumFontSize">10</float>
 						<reference key="IBUIFontDescription" ref="842001426"/>
 						<reference key="IBUIFont" ref="375739483"/>
+					</object>
+					<object class="IBUIImageView" id="981492632">
+						<reference key="NSNextResponder" ref="141827972"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{271, 158}, {228, 217}}</string>
+						<reference key="NSSuperview" ref="141827972"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="554680063"/>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">unloadbg.png</string>
+						</object>
 					</object>
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
@@ -661,6 +675,7 @@
 							<reference ref="819923111"/>
 							<reference ref="218208994"/>
 							<reference ref="400890904"/>
+							<reference ref="981492632"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -765,6 +780,11 @@
 						<reference key="object" ref="218208994"/>
 						<reference key="parent" ref="141827972"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">173</int>
+						<reference key="object" ref="981492632"/>
+						<reference key="parent" ref="141827972"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -793,12 +813,13 @@
 				<string key="147.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="148.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="171.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="173.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">172</int>
+			<int key="maxID">173</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -938,6 +959,7 @@
 			<string key="paper@2x.png">{640, 960}</string>
 			<string key="paperclip@2x.png">{388, 79}</string>
 			<string key="topwood@2x.png">{640, 99}</string>
+			<string key="unloadbg.png">{175, 170}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
