--- a/Draw/Controller/Feed/FeedDetailController~ipad.xib
+++ b/Draw/Controller/Feed/FeedDetailController~ipad.xib
@@ -435,7 +435,7 @@
 						<string key="NSFrame">{{48, 268}, {100, 45}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="981492632"/>
+						<reference key="NSNextKeyView" ref="486281110"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -452,7 +452,7 @@
 						<reference key="IBUIFontDescription" ref="842001426"/>
 						<reference key="IBUIFont" ref="375739483"/>
 					</object>
-					<object class="IBUIImageView" id="981492632">
+					<object class="IBUIImageView" id="486281110">
 						<reference key="NSNextResponder" ref="141827972"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{271, 158}, {228, 217}}</string>
@@ -586,6 +586,14 @@
 					<int key="connectionID">170</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">feedImage</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="486281110"/>
+					</object>
+					<int key="connectionID">174</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickActionButton:</string>
 						<reference key="source" ref="554680063"/>
@@ -675,7 +683,7 @@
 							<reference ref="819923111"/>
 							<reference ref="218208994"/>
 							<reference ref="400890904"/>
-							<reference ref="981492632"/>
+							<reference ref="486281110"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -782,7 +790,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">173</int>
-						<reference key="object" ref="981492632"/>
+						<reference key="object" ref="486281110"/>
 						<reference key="parent" ref="141827972"/>
 					</object>
 				</array>
@@ -819,7 +827,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">173</int>
+			<int key="maxID">174</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -849,6 +857,7 @@
 						<string key="actionButton">UIButton</string>
 						<string key="commentInput">UITextView</string>
 						<string key="commentLabel">UILabel</string>
+						<string key="feedImage">UIImageView</string>
 						<string key="guessStatLabel">UILabel</string>
 						<string key="inputBackground">UIImageView</string>
 						<string key="inputBackgroundView">UIView</string>
@@ -871,6 +880,10 @@
 						<object class="IBToOneOutletInfo" key="commentLabel">
 							<string key="name">commentLabel</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="feedImage">
+							<string key="name">feedImage</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="guessStatLabel">
 							<string key="name">guessStatLabel</string>
