--- a/Draw/Dice/Controller/Room/DiceRoomListCell.xib
+++ b/Draw/Dice/Controller/Room/DiceRoomListCell.xib
@@ -41,7 +41,7 @@
 						<reference key="NSNextResponder" ref="434942970"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="838691056">
+							<object class="IBUIImageView" id="205098046">
 								<reference key="NSNextResponder" ref="172415053"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{50, 0}, {265, 101}}</string>
@@ -52,7 +52,7 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
-							<object class="IBUIImageView" id="755871032">
+							<object class="IBUIImageView" id="648621589">
 								<reference key="NSNextResponder" ref="172415053"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{68, 37}, {237, 1}}</string>
@@ -73,7 +73,7 @@
 								<string key="NSFrame">{{63, 8}, {229, 25}}</string>
 								<reference key="NSSuperview" ref="172415053"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="755871032"/>
+								<reference key="NSNextKeyView" ref="648621589"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -107,7 +107,7 @@
 								<string key="NSFrame">{{7, 8}, {42, 44}}</string>
 								<reference key="NSSuperview" ref="172415053"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="838691056"/>
+								<reference key="NSNextKeyView" ref="205098046"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -122,7 +122,7 @@
 							<object class="IBUIView" id="271112509">
 								<reference key="NSNextResponder" ref="172415053"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{71, 49}, {42, 44}}</string>
+								<string key="NSFrame">{{71, 46}, {42, 44}}</string>
 								<reference key="NSSuperview" ref="172415053"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="906246427"/>
@@ -138,7 +138,7 @@
 							<object class="IBUIView" id="906246427">
 								<reference key="NSNextResponder" ref="172415053"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{119, 49}, {42, 44}}</string>
+								<string key="NSFrame">{{119, 46}, {42, 44}}</string>
 								<reference key="NSSuperview" ref="172415053"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="743692790"/>
@@ -154,7 +154,7 @@
 							<object class="IBUIView" id="743692790">
 								<reference key="NSNextResponder" ref="172415053"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{167, 49}, {42, 44}}</string>
+								<string key="NSFrame">{{167, 46}, {42, 44}}</string>
 								<reference key="NSSuperview" ref="172415053"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="635197295"/>
@@ -170,7 +170,7 @@
 							<object class="IBUIView" id="635197295">
 								<reference key="NSNextResponder" ref="172415053"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{217, 49}, {42, 44}}</string>
+								<string key="NSFrame">{{217, 46}, {42, 44}}</string>
 								<reference key="NSSuperview" ref="172415053"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1039617751"/>
@@ -186,9 +186,10 @@
 							<object class="IBUIView" id="1039617751">
 								<reference key="NSNextResponder" ref="172415053"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{265, 49}, {42, 44}}</string>
+								<string key="NSFrame">{{265, 46}, {42, 44}}</string>
 								<reference key="NSSuperview" ref="172415053"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -239,7 +240,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">backgroundImageView</string>
 						<reference key="source" ref="434942970"/>
-						<reference key="destination" ref="838691056"/>
+						<reference key="destination" ref="205098046"/>
 					</object>
 					<int key="connectionID">24</int>
 				</object>
@@ -274,8 +275,8 @@
 							<reference ref="743692790"/>
 							<reference ref="635197295"/>
 							<reference ref="1039617751"/>
-							<reference ref="838691056"/>
-							<reference ref="755871032"/>
+							<reference ref="205098046"/>
+							<reference ref="648621589"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -316,12 +317,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">22</int>
-						<reference key="object" ref="838691056"/>
+						<reference key="object" ref="205098046"/>
 						<reference key="parent" ref="434942970"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">25</int>
-						<reference key="object" ref="755871032"/>
+						<reference key="object" ref="648621589"/>
 						<reference key="parent" ref="434942970"/>
 					</object>
 				</array>
@@ -347,6 +348,7 @@
 				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">DiceRoomListCell</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="5.CustomClassName">HKGirlFontLabel</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
@@ -385,6 +387,22 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/DiceRoomListCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontLabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HKGirlFontLabel</string>
+					<string key="superclassName">FontLabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
